--- a/public/themes/simpleboot3/portal/product.html
+++ b/public/themes/simpleboot3/portal/product.html
@@ -1,309 +1,64 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<include file="public@head"/>
-	</head>
-	<body>
-		<div id="solutions">
-			<div class="index-banner index-banner-top" style="width:100%;">
-				<div class="hidden-xs index-banner-img" style="background: url('__TMPL__/public/assets/style/img/solutions/banner.png') 0 0 no-repeat;background-size:  100% 100%;">
-					<div class="inner">
-						<div class="index-banner-box4">
-							<div class="index-banner-title">国企和上市物业公司保洁用工解决方案</div>
-							<div class="index-banner-text"><span>采用外包的模式把保洁业务领域的人力资源事务进行外包</span></div>
-							<div class="index-banner-text"><span>整个人力资源招、培、管、留、退、价值实现全生命周期服务</span></div>
-							<div class="yuyue-btn">
-								<a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="hidden-lg hidden-md hidden-sm index-banner-img" style="background: url('__TMPL__/public/assets/style/img/contacts/moble_banner.png') 0 0 no-repeat;background-size:  100% 100%;">
-					<div class="inner">
-						<div class="index-banner-box4">
-							<div class="index-banner-title  text-center" style="padding: 0.18rem 0.3rem;">国企和上市物业公司</div>
-							<div class="index-banner-title  text-center" style="padding: 0.18rem 0.3rem;">保洁用工解决方案</div>
-						</div>
-					</div>
+<head>
+    <include file="public@head"/>
+</head>
+<body>
+<div id="product" class="product">
+<!-- 头部图片 -->
+    <div class="banner">
+        <div class="product_banner_text_one">劳务派遣</div>
+        <div class="product_banner_text_two">劳务派遣机构与派遣员工订立劳动合同，把劳动者派向用工单位，用工单位向派遣机构支付服务费的模式</div>
+    </div>
+    <!-- 客户的难题 -->
+    <div class="problem">
+        <div class="title">客户的难题</div>
+        <div class="tag">持续不断为客户提供具有价值的产品和服务</div>
+        <div class="list">
+			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+				<div class="item_content">
+					<div class="item_title">编制不足</div>
+					<div class="item_des">企业编制不足，人力配置安排无法负荷业务变化需求</div>
 				</div>
 			</div>
-			<div class="hidden-xs bg solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">面临的问题</div>
-					</div>
-					<div class="row solution-question" style="margin-left: 5px;">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item text-center">
-								<img src="__TMPL__/public/assets/style/img/solutions/question_1.svg" class="solution-question-item-img" />
-								<div class="solution-question-item-title">安全合规</div>
-								<div class="solution-question-item-text text-left">随着以数治税大数据时代到来和社保入税政策的实施，社保缴费基数，个税申报金额，让企业的合规经营变得尤其重要，如何选择合规的外包伙伴是首要之选</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item text-center">
-								<img src="__TMPL__/public/assets/style/img/solutions/question_2.svg" class="solution-question-item-img" />
-								<div class="solution-question-item-title">招聘管理</div>
-								<div class="solution-question-item-text text-left">一线保洁人员招工难、流动性较强，让企业的人员招聘、培训、维持、管理、风险控制等成本都居高不下，非核心业务岗位耗费企业大量的时间和精力</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item text-center">
-								<img src="__TMPL__/public/assets/style/img/solutions/question_3.svg" class="solution-question-item-img" />
-								<div class="solution-question-item-title">风险控制</div>
-								<div class="solution-question-item-text text-left">在当下劳动者权益时代，随着人们法律意识的不断增强，在员工入离职、劳动合同签订、工伤事故，薪酬待遇等环节，劳资纠纷、劳动争议和制裁等潜在风险始终存在</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-question-item text-center">
-								<img src="__TMPL__/public/assets/style/img/solutions/question_4.svg" class="solution-question-item-img" />
-								<div class="solution-question-item-title">隐形成本</div>
-								<div class="solution-question-item-text text-left">受劳动关系的限制因灵活性的季节或假期用工、项目变化用工导致一线保洁人员冗余和紧缺并存，造成企业隐形成本防不胜防</div>
-							</div>
-						</div>
-					</div>
-					<div class="solution-question-bottom text-center ">
-						<p>采用外包的模式把保洁业务领域的人力资源事务进行外包</p>
-					</div>
+			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+				<div class="item_content">
+					<div class="item_title">模式单一</div>
+					<div class="item_des">企业用工模式单一，难以提供多元人力资源配置组合方案</div>
+				</div>
+			    
+			</div>
+			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+			    <div class="item_content">
+					<div class="item_title">成本高</div>
+					<div class="item_des">同时联络多个窗口、多个渠道，沟通成本高、效率低</div>
 				</div>
 			</div>
-			<div class="hidden-lg hidden-md hidden-sm  bg solutions" style="background: #FBFBFD;padding-bottom: 0;">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">面临的问题</div>
-					</div>
-					<div class="solution-2">
-						<div class="solution-2-item active">
-							<div class="solution-2-item-top">
-								<div class="solution-2-item-title">安全合规</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="solution-2-item-box">
-								<div class="solution-2-item-text">随着以数治税大数据时代到来和社保入税政策的实施，社保缴费基数，个税申报金额，让企业的合规经营变得尤其重要，如何选择合规的外包伙伴是首要之选</div>
-								<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>1))}">了解更多 >>></a> -->
-							</div>
-						</div>
-						<div class="solution-2-item">
-							<div class="solution-2-item-top">
-								<div class="solution-2-item-title">招聘管理</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="solution-2-item-box">
-								<div class="solution-2-item-text">一线保洁人员招工难、流动性较强，让企业的人员招聘、培训、维持、管理、风险控制等成本都居高不下，非核心业务岗位耗费企业大量的时间和精力</div>
-								<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>2))}">了解更多 >>></a> -->
-							</div>
-						</div>
-						<div class="solution-2-item">
-							<div class="solution-2-item-top">
-								<div class="solution-2-item-title">风险控制</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="solution-2-item-box">
-								<div class="solution-2-item-text">在当下劳动者权益时代，随着人们法律意识的不断增强，在员工入离职、劳动合同签订、工伤事故，薪酬待遇等环节，劳资纠纷、劳动争议和制裁等潜在风险始终存在</div>
-								<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>3))}">了解更多 >>></a> -->
-							</div>
-						</div>
-						<div class="solution-2-item">
-							<div class="solution-2-item-top">
-								<div class="solution-2-item-title">隐形成本</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="solution-2-item-box">
-								<div class="solution-2-item-text">受劳动关系的限制因灵活性的季节或假期用工、项目变化用工导致一线保洁人员冗余和紧缺并存，造成企业隐形成本防不胜防</div>
-								<!-- <a href="{:cmf_url('portal/Solution/index',array('id'=>3))}">了解更多 >>></a> -->
-							</div>
-						</div>
-					</div>
+			<div class="item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
+				<div class="item_content">
+					<div class="item_title">临时用人</div>
+					<div class="item_des">临时性、辅助性、重复性、可替代性工作占据大量工作时间和精力</div>
 				</div>
 			</div>
-			<div class="bg solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">解决方案架构</div>
-					</div>
-					<div class="row solution-architecture">
-						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-							<div class="flex-box text-center solution-architecture-box">
-								<div class="solution-architecture-circle2">招</div>
-								<div class="solution-architecture-triangle">
-									<img src="__TMPL__/public/assets/style/img/solutions/right.svg" class="solution-architecture-img" />
-								</div>
-								<div class="solution-architecture-circle2">培</div>
-								<div class="solution-architecture-triangle">
-									<img src="__TMPL__/public/assets/style/img/solutions/right.svg" class="solution-architecture-img" />
-								</div>
-								<div class="solution-architecture-circle2">管</div>
-							</div>
-							<div class="flex-box-wrap-end text-center solution-architecture-box">
-								<div class="solution-architecture-triangle2">
-									<img src="__TMPL__/public/assets/style/img/solutions/left-right.svg" class="solution-architecture-img" />
-								</div>
-							</div>
-							<div class="flex-box-wrap-end text-center solution-architecture-box2">
-								<div class="solution-architecture-circle2">留</div>
-								<div class="solution-architecture-triangle">
-									<img src="__TMPL__/public/assets/style/img/solutions/left.svg" class="solution-architecture-img" />
-								</div>
-								<div class="solution-architecture-circle2">退</div>
-							</div>
-						</div>
-						<div class="col-lg-5 col-md-5 col-sm-5 col-xs-12" style="margin-top: 0.26rem;">
-							<div class="solution-architecture-text">采用外包的模式把保洁业务领域的人力资源事务进行外包，整个人力资源招、培、管、留、退实现全生命周期服务，解决季节用工、项目波动、人员冗余和紧缺并存现象。让招聘预算清晰可现，项目交付结果可见，隐形成本显性可控、风险责任转移完成。实现国企物业公司遵守国家法律、解决劳资纠纷，消灭物业公司的潜在用工风险。</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="bgc solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">方案价值</div>
-					</div>
-					<div class="row solution-advantage">
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-advantage-item">
-								<img src="__TMPL__/public/assets/style/img/solutions/advantage_4.svg" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-bottom">
-									<div class="solution-advantage-item-bottom-title">风险控制</div>
-									<div class="solution-advantage-item-bottom-text">社保稽核风险转移，第三方全面承接和担责；劳资纠纷、工伤责任、经济责任由第三方全面承接和支付，三期员工的薪资社保第三方承接并按需替换符合保洁工作的人员工作。</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-advantage-item">
-								<img src="__TMPL__/public/assets/style/img/solutions/advantage_2.svg" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-bottom">
-									<div class="solution-advantage-item-bottom-title">成本控制</div>
-									<div class="solution-advantage-item-bottom-text">针对第三方进行结果管理使管理成本下降，根据假期和项目需要灵活的用人安排不多付出成本，外包转移了政府监管成本，同时解除劳动关系风险成本转移，使企业的隐形成本变得显性可控。</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-advantage-item">
-								<img src="__TMPL__/public/assets/style/img/solutions/advantage_1.svg" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-bottom">
-									<div class="solution-advantage-item-bottom-title">管理提升</div>
-									<div class="solution-advantage-item-bottom-text">核心业务的管理直线化让企业更加专注核心岗位，让岗位效率提升；关注结果而非过程减少了管理成本，解除劳动关系束缚更加灵活可控。</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-							<div class="solution-advantage-item">
-								<img src="__TMPL__/public/assets/style/img/solutions/advantage_3.svg" class="solution-advantage-item-img" />
-								<div class="solution-advantage-item-bottom">
-									<div class="solution-advantage-item-bottom-title">财务优化</div>
-									<div class="solution-advantage-item-bottom-text">转移劳动关系减少了员工基数，单体利润率提升，规避社保稽查，以采购费入账，经营科目为采购成本（含增值税）；同时企业人均单体效能提升能耗降低，让企业审核和监管合规、规范。</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- <div class="bg solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">成功案例</div>
-					</div>
-					<div class="row solution-example">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<img src="__TMPL__/public/assets/style/img/solutions/example_1.png" class="solution-example-left-img" />
-						</div>
-						<div class="hidden-xs col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<div class="solution-example-text"> XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。</div>
-							<ul class="solution-example-imgs">
-								<li class="active" data-url="__TMPL__/public/assets/style/img/solutions/example_1.png">
-									<img src="__TMPL__/public/assets/style/img/solutions/example_1.png" />
-									<div class="posbox"></div>
-								</li>
-								<li data-url="__TMPL__/public/assets/style/img/solutions/example_2.png">
-									<img src="__TMPL__/public/assets/style/img/solutions/example_2.png" />
-									<div class="posbox"></div>
-								</li>
-								<li data-url="__TMPL__/public/assets/style/img/solutions/example_3.png">
-									<img src="__TMPL__/public/assets/style/img/solutions/example_3.png" />
-									<div class="posbox"></div>
-								</li>
-							</ul>
-						</div>
-						<div class="hidden-lg hidden-md hidden-sm col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<ul class="solution-example-imgs" style="margin-top: 10px;">
-								<li class="active" data-url="__TMPL__/public/assets/style/img/solutions/example_1.png">
-									<img src="__TMPL__/public/assets/style/img/solutions/example_1.png" />
-									<div class="posbox"></div>
-								</li>
-								<li data-url="__TMPL__/public/assets/style/img/solutions/example_2.png">
-									<img src="__TMPL__/public/assets/style/img/solutions/example_2.png" />
-									<div class="posbox"></div>
-								</li>
-								<li data-url="__TMPL__/public/assets/style/img/solutions/example_3.png">
-									<img src="__TMPL__/public/assets/style/img/solutions/example_3.png" />
-									<div class="posbox"></div>
-								</li>
-							</ul>
-							<div class="solution-example-text"> XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。XX政府大楼保洁外包合作。</div>
-							
-						</div>
-					</div>
-				</div>
-			</div> -->
-			<div class="bg solutions">
-				<div class="inner">
-					<div class="inner-bigger-title">
-						<div class="p1">相关解决方案</div>
-					</div>
-					<div class="row solution-related">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<div class="flex-box solution-related-item">
-								<div>
-									<div class="solution-related-item-title">保洁用工风险解决方案</div>
-									<div class="solution-related-item-text hidden-xs">实现劳动关系的全面转移。劳务费发票替代工资表，实现公司人员真空化</div>
-									<div class="solution-related-item-btn">
-										<a href="{:cmf_url('portal/Solution/index',array('id'=>2))}" title="查看更多">查看更多</a>
-									</div>
-								</div>
-								<div>
-									<img src="__TMPL__/public/assets/style/img/solutions/related_1.svg" class="solution-related-item-img" />
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-							<div class="flex-box solution-related-item">
-								<div>
-									<div class="solution-related-item-title">保洁人员招聘外包解决方案</div>
-									<div class="solution-related-item-text hidden-xs">依托华劳集团15年人力资源外包经验，海量的人才储备、庞大的招聘渠道、优秀的寻访能力</div>
-									<div class="solution-related-item-btn">
-										<a href="{:cmf_url('portal/Solution/index',array('id'=>2))}" title="查看更多">查看更多</a>
-									</div>
-								</div>
-								<div>
-									<img src="__TMPL__/public/assets/style/img/solutions/related_2.svg" class="solution-related-item-img" />
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+        </div>
+    </div>
+	<!-- 我们的产品 -->
+	<div class="ourproduct">
+		<div class="ourproduct_left">
+			<div class="ourproduct_left_title">我们的产品</div>
+			<div class="ourproduct_left_tag">劳务派遣服务--企业用工灵活，风险有效转移</div>
+			<div class="ourproduct_left_text">我们深刻理解企业业务发展过程中所需的灵活性，以及组织管理中的多元资源配置需求，通过人才派遣模式，客户有机会不受组织编制限制，有效平衡灵活用工与合规管理，实现成本控制和人才架构优化等多重目标。</div>
+			<div class="ourproduct_left_text">劳务派遣机构与派遣员工订立劳动合同，把劳动者派向用工单位，用工单位向派遣机构支付服务费的模式。临时性、辅助性、可替代性岗位的人才派遣服务。</div>
+			<button><img src="__TMPL__/public/assets/style/imgs/product/ourproduct-yuyue.png" alt="">预约咨询</button>
 		</div>
-		
-		
-		<include file="public@footer"/>
-	</body>
-	<script type="text/javascript">
-		$(function(){
-			$(".solution-example .solution-example-imgs li").mouseover(function(){
-				$(".solution-example-left-img").attr("src",$(this).data("url"));
-				$(".solution-example .solution-example-imgs li").removeClass("active");
-				$(this).addClass("active");
-			})
-			$('.solution-2-item').on('click', function() {
-				var bol = $(this).hasClass('active');
-				$('.solution-2-item').removeClass('active');
-				if (bol) {
-					$(this).removeClass('active');
-				} else {
-					$(this).addClass('active');
-				}
-			
-			})
-		})
-	</script>
+		<img src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
+	</div>
+</div>
+<include file="public@footer"/>
+</body>
+<script type="text/javascript">
+    $(function () {
+
+    })
+</script>
 </html>
