--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -164,17 +164,17 @@
 			<button>获取定制解决方案</button>
 		</div>
 		<div class="resolve_right">
-			<div class="resolve_right_item active">
+			<div class="resolve_right_item active" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
 				<div class="resolve_right_content">
 					<div class="text">全流程技术支持</div>
 				</div>
 			</div>
-			<div class="resolve_right_item">
+			<div class="resolve_right_item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
 				<div class="resolve_right_content">
 					<div class="text">全方案咨询</div>
 				</div>
 			</div>
-			<div class="resolve_right_item">
+			<div class="resolve_right_item" style="background-image: url(__TMPL__/public/assets/style/imgs/solution/resolve3.png);">
 				<div class="resolve_right_content">
 					<div class="text">全地域服务</div>
 				</div>
