--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -14,7 +14,7 @@
 					<div class="text">服务上市公司29家和超千人企业83家</div>
 				</div>
 			</div>
-			<div class="index-number" style="width: 100%;background: #fff;border-bottom: solid 1px rgba(255, 80, 0, 0.2);">
+			<div class="index-number">
 				<div class="inner">
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
@@ -174,7 +174,7 @@
 								<div class="text">华劳集团始终以客户为中心，为客户提供极具价值的产品和服务为理念，凭借15年业务专长，专注于企业规范用工模式的探索与研发，为客户提供一站式人力资源综合解决方案。</div>
 								<div class="text">华劳集团目前服务客户累计已达3000余家，安置就业人员50余万人，为促进就业，构建和谐社会，建立新型劳动关系作出巨大贡献。</div>
 								<div class="company-name">合作客户</div>
-								<div class="flex-around">
+								<div class="flex-box">
 									<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
 									<div><img src="__TMPL__/public/assets/style/imgs/index/customer/2.png" /></div>
 									<div><img src="__TMPL__/public/assets/style/imgs/index/customer/3.png" /></div>
@@ -237,10 +237,10 @@
 							<p>发展历程</p>
 						</div>
 						<div class="inner-small-title text-center">持续不断为客户提供具有价值的产品和服务</div>
-						<div class="flex-around">
+						<div class="flex-around hidden-xs">
 							<div class="index-history-box-left">
 								<div class="text">华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。</div>
-								<div style="background: #ff5000;overflow: auto;height: 4.64rem;">  <!--  -->
+								<div class="time-line">
 									<ul class="history-box">
 										<li class="active"><div class="circular"></div><div class="name">2021</div></li>
 										<li><div class="circular"></div><div class="name">11-17 上海华劳科技有限公司成立</div></li>
@@ -306,6 +306,75 @@
 							</div>
 						</div>
 					</div>
+					<div class="hidden-lg hidden-md hidden-sm">
+						<div class="flex-around">
+							<div class="index-history-box-left">
+								<div class="text">华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。</div>
+								<div class="time-line">
+									<ul class="history-box">
+										<li class="active"><div class="circular"></div><div class="name">2021</div></li>
+										<li><div class="circular"></div><div class="name">11-17 &nbsp上海华劳科技有限公司成立</div></li>
+										<li><div class="circular"></div><div class="name">05-26 &nbsp中朗（北京）国际保安服务有限公司投资控股</div></li>
+										<li><div class="circular"></div><div class="name">05-18 &nbsp山东华企科技服务有限公司成立</div></li>
+										<li><div class="circular"></div><div class="name">04-26 &nbsp华劳（北京）人力资源服务有限公司投资控股</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2020</div></li>
+										<li><div class="circular"></div><div class="name">09-01 &nbsp北京灵活科技有限公司 投资</div></li>
+										<li><div class="circular"></div><div class="name">05-11 &nbsp华劳人力资源有限公司 (厦门) 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-26 &nbsp灵动未来（天津）信息技术有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-07 &nbsp德州北方电子商务有限公司 更名为 山东企保网络科技有限公司</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2019</div></li>
+										<li><div class="circular"></div><div class="name">12-04 &nbsp山东华劳人力资源有限公司菏泽分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-21 &nbsp中洁清洁服务有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-16 &nbsp德州华劳职业培训学校有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-13 &nbsp山东华劳保险代理有限公司 更名为 山东金伞保险代理有限公司</div></li>
+										<li><div class="circular"></div><div class="name">04-29 &nbsp山东华劳人力资源有限公司天津分公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2018</div></li>
+										<li><div class="circular"></div><div class="name"><div>08-08 &nbsp山东百业服务外包有限公司 成立</div><div>08-08 山东中劳劳务分包有限公司 成立</div><div>08-08 德州千业酒店管理有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-09 &nbsp德州百业劳务服务有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">01-19 &nbsp山东华劳人力资源有限公司 迁址 省府济南</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2017</div></li>
+										<li><div class="circular"></div><div class="name">12-15 &nbsp华劳股份有限公司 更名为 华劳集团股份有限公司</div></li>
+										<li><div class="circular"></div><div class="name">11-30 &nbsp山东华劳人力资源有限公司重庆分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">11-09 &nbsp广州华劳人力资源有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">09-13 &nbsp德州万泉保险代理有限责任公司 更名为 山东华劳保险代理有限公司</div></li>
+										<li><div class="circular"></div><div class="name">09-08 &nbsp德州万泉保险代理有限责任公司 全资收购</div></li>
+										<li><div class="circular"></div><div class="name">09-05 &nbsp山东华劳人力资源有限公司郑州分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-07 &nbsp山东华劳人力资源有限公司台安分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-02 &nbsp山东华劳人力资源有限公司新乡分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">07-25 &nbsp山东华劳人力资源有限公司焦作分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-09 &nbsp山东华劳人力资源有限公司潍坊分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-08 &nbsp山东华劳人力资源有限公司安徽分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">06-07 &nbsp山东华劳人力资源有限公司济源分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-31 &nbsp山东华劳人力资源有限公司淮安分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-08 &nbsp德州天衢人力资源服务有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-05 &nbsp山东华劳人力资源有限公司吉林省分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name"><div>04-10 &nbsp山东华劳人力资源有限公司徐州分公司 成立</div><div>04-10 深圳金伞保险经纪有限公司 成立</div><div>04-10 深圳总裁驿站美容连锁有限公司 成立</div></div></li>
+										<li><div class="circular"></div><div class="name">04-05 &nbsp山东华劳人力资源有限公司滨州分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">03-23 &nbsp华劳股份有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">03-16 &nbsp四川华劳人力资源有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">01-25 &nbsp山东中政服务外包有限公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2016</div></li>
+										<li><div class="circular"></div><div class="name">12-22 &nbsp山东华劳人力资源有限公司青岛分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">12-19 &nbsp山东华劳人力资源有限公司河北分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">09-18 &nbsp华劳（天津）人力资源有限公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">08-15 &nbsp山东华劳人力资源有限公司禹城分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">05-10 &nbsp山东华劳人力资源有限公司沂水分公司 成立</div></li>
+										<li><div class="circular"></div><div class="name">04-27 &nbsp山东华劳人力资源有限公司临沂分公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2015</div></li>
+										<li><div class="circular"></div><div class="name">11-02 &nbsp德州市华劳人力资源有限公司 更名为 山东华劳人力资源有限公司</div></li>
+										<li><div class="circular"></div><div class="name">05-23 &nbsp德州北方电子商务有限公司 成立</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2014</div></li>
+										<li><div class="circular"></div><div class="name">05-01 &nbsp华劳就业网人才市场招聘 门店开业</div></li>
+										<li class="active"><div class="circular"></div><div class="name">2007</div></li>
+										<li><div class="circular"></div><div class="name">11-14 &nbsp德州市华劳人力资源有限公司 成立</div></li>
+									</ul>
+								</div>
+							</div>
+							<div class="index-history-box-right">
+								<div class="history-img"><img src="__TMPL__/public/assets/style/imgs/index/history/1.png" /></div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="index-advantage">
@@ -314,7 +383,9 @@
 						<p>我们的优势</p>
 					</div>
 					<div class="inner-small-title text-center">持续不断为客户提供具有价值的产品和服务</div>
-					<div class="index-advantage-box">
+				</div>
+				<div class="index-advantage-box">
+					<div class="inner">
 						<div class="index-advantage-box-top">
 							<div class="item">
 								<img src="__TMPL__/public/assets/style/imgs/index/advance/1.svg" />
@@ -334,32 +405,36 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="index-advantage-bottom">
-					<div class="inner">
-						<div class="index-advantage-bottom-box">
-							<div class="item">
-								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/1.svg" />
-								<div>服务团队平均工龄五年以上</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="item">
-								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/2.svg" />
-								<div>拥有百人招聘团队<br />线上线下渠道完善</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="item">
-								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/3.svg" />
-								<div>人力资源服务资质<br />保险代理资质</div>
-								<div class="icon-img"></div>
-							</div>
-							<div class="item">
-								<img src="__TMPL__/public/assets/style/imgs/index/advance/number/4.svg" />
-								<div>拥有人力资源高精尖人才50人</div>
-								<div class="icon-img"></div>
+					<div class="index-advantage-bottom">
+						<div class="inner">
+							<div class="index-advantage-bottom-box">
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/advance/number/1.svg" />
+									<div>服务团队平均工龄五年以上</div>
+									<div class="icon-img"></div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/advance/number/2.svg" />
+									<div>拥有百人招聘团队<br />线上线下渠道完善</div>
+									<div class="icon-img"></div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/advance/number/3.svg" />
+									<div>人力资源服务资质<br />保险代理资质</div>
+									<div class="icon-img"></div>
+								</div>
+								<div class="item">
+									<img src="__TMPL__/public/assets/style/imgs/index/advance/number/4.svg" />
+									<div class="hidden-xs">拥有人力资源高精尖人才50人</div>
+									<div class="hidden-lg hidden-md hidden-sm">拥有人力资源高精尖人才50<br/>人</div>
+									<div class="icon-img"></div>
+								</div>
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm">
+					<img src="__TMPL__/public/assets/style/imgs/index/advance-phone-bg2.png" style="width: 100%;" />
 				</div>
 			</div>
 			<div class="index-news">
@@ -377,7 +452,7 @@
 							</div>
 							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
 							<div class="time">2022/11/05</div>
-							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="text hidden-xs">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
 							<div class="more-btn"> › </div>
 						</div>
 						<div class="item">
@@ -388,7 +463,7 @@
 							</div>
 							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
 							<div class="time">2022/11/05</div>
-							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="text hidden-xs">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
 							<div class="more-btn"> › </div>
 						</div>
 						<div class="item">
@@ -399,7 +474,7 @@
 							</div>
 							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
 							<div class="time">2022/11/05</div>
-							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="text hidden-xs">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
 							<div class="more-btn"> › </div>
 						</div>
 						<div class="item">
@@ -410,11 +485,11 @@
 							</div>
 							<div class="title">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知</div>
 							<div class="time">2022/11/05</div>
-							<div class="text">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
+							<div class="text hidden-xs">人力资源社会保障部办公厅 关于开展人力资源服务机构稳就业促就业行动的通知人力资源社会保障部办公厅 关于开展人力资源服务机构稳就...</div>
 							<div class="more-btn"> › </div>
 						</div>
 					</div>
-					<div class="more">更多新闻</div>
+					<div class="more hidden-xs">更多新闻</div>
 				</div>
 			</div>
 			<div class="index-customer">
@@ -424,18 +499,7 @@
 					</div>
 					<div class="inner-small-title text-center">深耕人力资源服务业，为企业提供更优质的服务</div>
 					<div class="index-customer-box">
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/2.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/3.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/4.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/5.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/6.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/7.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/8.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/9.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/10.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/11.png" /></div>
-						<div><img src="__TMPL__/public/assets/style/imgs/index/customer/12.png" /></div>
+						<include file="public@customers" />
 					</div>
 					<div class="more">查看所有客户案例</div>
 				</div>
