--- a/public/themes/simpleboot3/public/customers.html
+++ b/public/themes/simpleboot3/public/customers.html
@@ -1,37 +1,12 @@
-<div class="inner">
-	<div class="inner-bigger-title">
-		<p>300+客户值得信赖的选择</p>
-	<!-- 	<p></p>
-		<p>COOPERATIVE CUSTOMERS</p> -->
-	</div>
-	<ul class="customers-box">
-		<li><img src="__TMPL__/public/assets/style/img/customers/1.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/13.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/2.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/21.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/20.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/8.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/18.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/19.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/15.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/17.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/16.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/3.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/4.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/6.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/7.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/9.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/11.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/12.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/14.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/5.png" class="customers-img" /></li>
-		<li><img src="__TMPL__/public/assets/style/img/customers/10.png" class="customers-img" /></li>
-		<!-- <links>
-			<li>
-				<a href="{$vo.url|default=''}" target="{$vo.target|default=''}">
-					<img alt="{$vo.name|default=''}" src="{:cmf_get_image_url($vo.image)}" class="customers-img">
-				</a>
-			</li>
-		</links> -->
-	</ul>
-</div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/1.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/2.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/3.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/4.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/5.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/6.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/7.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/8.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/9.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/10.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/11.png" /></div>
+<div><img src="__TMPL__/public/assets/style/imgs/index/customer/12.png" /></div>
