--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -1,5 +1,5 @@
-<div class="footer"> <!-- <a href="javascript:void(0);">产品服务</a> -->
-	<div class="inner">
+<div class="footer">
+	<div class="inner hidden-xs">
 		<div class="foot-top">
 			<div class="foot-top-left">
 				<div class="item">
@@ -105,6 +105,39 @@
 				<div>kf@hualaogroup.com <img src="__TMPL__/public/assets/style/imgs/index/footer-email.svg" /></div>
 				<div>山东省德州市天衢新区康博大厦1701 <img src="__TMPL__/public/assets/style/imgs/index/footer-position.svg" /></div>
 			</div>
+		</div>
+	</div>
+	<div class="inner hidden-lg hidden-md hidden-sm">
+		<div class="foot-phone-top">
+			<div class="item"><a href="javascript:void(0);">关于华劳</a></div>
+			<div class="item"><a href="javascript:void(0);">新闻资讯</a></div>
+			<div class="item"><a href="javascript:void(0);">联系我们</a></div>
+			<div class="item"><a href="javascript:void(0);">企业应用</a></div>
+		</div>
+		<div class="foot-phone-center">
+			<div class="flex-box">
+				<div class="item"><a href="javascript:void(0);">中政外包</a></div>
+				<div class="item"><a href="javascript:void(0);">中洁清洁</a></div>
+				<div class="item"><a href="javascript:void(0);">华劳人力</a></div>
+				<div class="item"><a href="javascript:void(0);">中劳劳务</a></div>
+			</div>
+			<div class="flex-box">
+				<div class="item"><a href="javascript:void(0);">中朗安服</a></div>
+				<div class="item"><a href="javascript:void(0);">金伞保险</a></div>
+				<div class="item"><a href="javascript:void(0);">雇工伞</a></div>
+				<div class="item"><a href="javascript:void(0);">和谐关系</a></div>
+			</div>
+			<div class="erweima">
+				<img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
+				<div>400-8718711</div>
+			</div>
+		</div>
+		<div class="foot-phone-bottom">
+			<div style="line-height: 1.86rem;">华劳集团股份有限公司  ©2022  HUALAO 版权所有</div>
+			<p>
+				<a href="http://www.miit.gov.cn/" target="_blank" style="padding-right: 10px;">鲁ICP备17039940号-1</a>
+			   	<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=37149202000991" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="http://www.beian.gov.cn/file/ghs.png" style="float:left;">鲁公网安备 37149202000991号</a>
+			</p>
 		</div>
 	</div>
 </div>
